Fix z-index issue with map layer controls

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	overflow-y:scroll;
+	overflow-y: scroll;
 }
 .error {
 	margin: 20px;
@@ -121,7 +121,11 @@ iframe.shortUrl {
 	margin-right: 0;
 }
 
-.popover{
+.navbar .dropdown-menu {
+	z-index: 1001; /* above the Leaflet control containers */
+}
+
+.popover {
 	max-width: 500px;
 	width: auto;
 }
@@ -134,11 +138,11 @@ iframe.shortUrl {
 	line-height: 35px;
 	padding: 5px 15px;
 }
-.navbar-brand img{
+.navbar-brand img {
 	padding-right: 5px;
 }
 .navbar-toggle {
-	  z-index: 100;
+	z-index: 100;
 }
 
 .navbar-btn {
@@ -148,6 +152,7 @@ iframe.shortUrl {
 .nav > li {
 	float: left;
 }
+
 /* change navbar breakpoint */
 @media (max-width: 900px) {
     .navbar-header {
@@ -186,9 +191,9 @@ iframe.shortUrl {
 /*
 	editor hint style
 */
-.wikibase-rdf-hint{
-  border-bottom: 1px solid gray;
-  white-space: normal;
+.wikibase-rdf-hint {
+	border-bottom: 1px solid gray;
+	white-space: normal;
 }
 
 /**
@@ -213,7 +218,7 @@ iframe.shortUrl {
 	padding-bottom: 5px!important;
 }
 
-.QueryExamples  .exampleTable {
+.QueryExamples .exampleTable {
 	max-height: 500px;
 	overflow-y: auto;
 	overflow-x: hidden;
@@ -234,8 +239,8 @@ iframe.shortUrl {
 	z-index: 100;
 	display: none;
 	min-height: 800px;
-	max-width:100vw;
-	overflow:auto;
+	max-width: 100vw;
+	overflow: auto;
 }
 
 /* colors */
@@ -407,7 +412,7 @@ div.jqcloud span.w1 { color: rgba(51,122,183,0.45); }
 	ULS
 */
 
-.nav .uls-trigger  {
+.nav .uls-trigger {
 	display: none;
 	padding-left: 30px;
 }
